# ut-scooter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  QZXingConfig.cmake.in  README.md  Scooter.apparmor  Scooter.desktop.in  clickable.json  graphics.qrc  main.cpp  manifest.json.in  prepare-deps.sh  qzxing.patch
po/: CMakeLists.txt  de.mo  de.po  fr.mo  fr.po  nl.mo  nl.po  scooter.s710.pot
qml/: Main.qml  qml.qrc
qml/map/: MapAreaView.qml  MapScooter.qml  MapScooterView.qml  MapTerminalNextbike.qml  MapTerminalView.qml
qml/pages/: AccountHistory.qml  LoginPage.qml  LoginPageNextbike.qml  MapPage.qml  MapPage.qml.autosave  MapPageMapbox.qml  ProfilePage.qml  ScanPage.qml  SettingsPage.qml  SettingsPageLogs.qml  SettingsPageProvider.qml  SharePage.qml
qml/provider/: NextBike.qml  Provider.qml  qmldir
qml/util/: ActiveRideInfo.qml  Battery.qml  CouponWarning.qml  Disclaimer.qml  HelperFunctions.qml  ListSelector.qml  NextBikeTerminalInfo.qml  PopoverSelector.qml  RideSummary.qml  ScooterInfo.qml  qmldir
src/: CMakeLists.txt  QmlClipboard.cpp  QmlClipboard.h  async.hpp  logger.h  network.cpp  network.h  provider.cpp  provider.h  providerbird.cpp  providerbird.h  providernextbike.cpp  providernextbike.h  providerstub.h  scooters.cpp  scooters.h  types.hpp
